fix logo and site-wrap

--- a/style.scss
+++ b/style.scss
@@ -11,6 +11,7 @@ html {
 .site-wrap {
   position: relative;
   width: 1300px;
+  margin: 0 auto;
 }
 .top-wrap{
   height: 565px;
@@ -47,7 +48,7 @@ html {
         }
       .logo-two{
         position: absolute;
-        left: -4px;
+        left: -3px;
         top: -5px;
         }
     }
